--- a/StilomaticTales/StilomaticTales/levels.plist
+++ b/StilomaticTales/StilomaticTales/levels.plist
@@ -6,13 +6,153 @@
 		<key>projectileImpulse</key>
 		<integer>700</integer>
 		<key>missileFrequency</key>
+		<integer>150</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_4.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
 		<integer>50</integer>
 		<key>worldGravity</key>
 		<integer>1</integer>
 		<key>worldSpeed</key>
 		<integer>6</integer>
 		<key>shields</key>
-		<integer>10</integer>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
+		<key>villan</key>
+		<string>villan_0.png</string>
+	</dict>
+	<dict>
+		<key>projectileImpulse</key>
+		<integer>700</integer>
+		<key>missileFrequency</key>
+		<integer>50</integer>
+		<key>worldGravity</key>
+		<integer>1</integer>
+		<key>worldSpeed</key>
+		<integer>6</integer>
+		<key>shields</key>
+		<integer>20</integer>
 		<key>villan</key>
 		<string>villan_0.png</string>
 	</dict>
